# to_do_app

./: Cargo.toml  Dockerfile  README.md
css/: base.css  main.css
deploy/: docker-compose.yml
deploy/nginx/: nginx.conf
javascript/: login.js  main.js
migrations/2023-08-19-030441_create_to_do_items/: up.sql
migrations/2023-08-20-040811_create_users/: down.sql  up.sql
src/: database.rs  main.rs  schema.rs
src/auth/: jwt.rs  mod.rs  processes.rs
src/models/item/: item.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/serialization/: login.rs  new_user.rs  to_do_item.rs  to_do_items.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/: mod.rs  path.rs
src/views/app/: content_loader.rs  items.rs  login.rs  logout.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
src/views/users/: create.rs  mod.rs
templates/: login.html  main.html
templates/components/: header.css  header.html
