[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "1.0.6"
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3.5"
serde = {version = "1.0.183", features = ["derive"]}
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
bcrypt = "0.8.2"
uuid = {version = "0.8", features = ["serde", "v4"]}
jwt = "0.9.0"
hmac = "0.8.1"
sha2 = "0.9"
log = "0.4.20"
env_logger = "0.8.4"